fix wrong selection of data for position diagrams